<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>ros2_denso_radar</name>
    <version>0.1.0</version>
    <description>
        Densor radar driver for ROS2
    </description>

    <maintainer>Andreas Klintberg</maintainer>

    <license>MIT</license>

    <author email="farazrkhan@gmail.com">Faraz Khan</author>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>python-serial</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
