<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros2_denso_radar</name>
    <version>0.1.0</version>
    <description>
        Denso radar driver for ROS2
    </description>

    <maintainer email="andreas.klintberg@gmail.com">Andreas Klintberg</maintainer>

    <license>MIT</license>

    <author email="farazrkhan@gmail.com">Faraz Khan</author>

    <depend>rclpy</depend>
    <depend>python-serial</depend>
    <depend>python-can</depend>
    <depend>cantools</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>radar_msgs</depend>

    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
